# osmocom-bb-virt

./: .gitignore  README.md
src/host/layer23/src/common/: logging.c
src/host/osmocon/: .gitignore
src/host/virt_phy/: .gitignore  configure.ac
src/host/virt_phy/include/openbsc/: gsm_data_shared.h
src/host/virt_phy/include/osmo-bts/: phy_link.h
src/host/virt_phy/src/: Makefile.am  gsmtapl1_if.c  gsmtapl1_if.h  l1_ctl_routines.c  l1_dl_routines.c  l1_ul_routines.c  l1ctl_rx_routines.c  l1ctl_sap.c  l1ctl_sap.h  l1ctl_sock.c  l1ctl_sock.h  l1ctl_tx_routines.c  logging.c  logging.h  virtphy.c  virtual_um.c  virtual_um.h
src/shared/libosmocore/: .gitignore
